[package]
name = "bbysjam"
version = "1.0.0"
authors = ["Casey Bailey <SonicZentropy@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "^1.0"
ron = "0.8.0"
bevy = { version = "0.8.0", default-features = false, features = ["dynamic", "animation", "bevy_asset", "bevy_audio", "bevy_gltf", "bevy_scene", "bevy_winit", "render", "png", "hdr", "vorbis", "x11", "filesystem_watcher"] }

winit = "0.27.2"
